# kiistor

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml
.github/workflows/: release.yml
.sqlx/: query-1729c237cd1243e0ef544f6ba7b2388219214b4da3535b5f67a871152e0a9c69.json  query-1de2ae59194c3d9de1265067905c8ec671a10d905b917f56afa51e0cdbe1acec.json  query-45dcd29c7061901654044bfcb43894ed78be8b622927c25ad15936246d001341.json  query-5a834949d6e8e89923f9bcc19dd19beb88db0d7f2d46ef987d888ead9a15af14.json  query-dd0b3b6ac6eea5cc7b838858a2a67591f09a3a6ec0a6f856673f90225b2fad32.json
migrations/: 20240307194147_init.sql  20240307213315_indexes.sql
src/: main.rs
