[package]
name = "kiistor"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres"] }
tabled = "0.15.0"
tokio = { version = "1.36.0", features = ["full"] }
